Fix CSS alignment and icon based on color scheme

--- a/src/style.css
+++ b/src/style.css
@@ -530,36 +530,6 @@ span.rain {
   color:whitesmoke;
 }
 
-/* .good_eea {
-  background: #50F0E6;
-  color: #333;
-}
-
-.fair_eea {
-  background: #50CCAA;
-  color: #333;
-}
-
-.moderate_eea {
-  background: #F0E641;
-  color: #333;
-}
-
-.poor_eea {
-  background: #FF5050;
-  color: #333;
-}
-
-.very_poor_eea {
-  background: #960005;
-  color: whitesmoke;
-}
-
-.extremely_poor_eea {
-  background: #7D2181;
-  color: whitesmoke;
-} */
-
 #air .unhealthy, #air .very_unhealthy, #air .hazardous {
   color: lightgrey;
 }
